<resources>
    <string name="app_name">NewSharedPreferences</string>
    <string name="ftvTitle">First Page</string>
    <string name="fbtnname">Name</string>
    <string name="fbtnadress">Adress</string>
    <string name="stvTitle">Shared Preference</string>
    <string name="sedname">input your name</string>
    <string name="sbtnsave">Save and Back</string>
    <string name="abtnsave">Save and back to Main</string>
    <string name="aedadress">input your mailadress</string>
    <string name="atvTitle">Shared Preference</string>
</resources>
