<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stvTitle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/stvTitle"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sedname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/sedname"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/sbtnsave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sbtnsave"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>