<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdressActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/atvTitle"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"

                android:text="@string/atvTitle"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/aedadress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"

                android:hint="@string/aedadress"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/abtnsave"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:text="@string/abtnsave"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>